<resources>
    <string name="app_name">WifiAirScout</string>
    <string name="copyright" translatable="false">Sichuan Changhong Network Technologies Co., Ltd.</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_give_up">Give up</string>
    <string name="action_exit">Exit</string>
    <string name="action_commit">Commit</string>
    <string name="action_operation">Operation</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_retry">Retry</string>
    <string name="action_delete">Delete</string>
    <string name="action_clear">Clear</string>
    <string name="action_add">Add</string>
    <string name="action_continue">Continue</string>
    <string name="action_refuse">Refuse</string>
    <string name="action_accept">Accept</string>
    <string name="action_load">Load</string>
    <string name="action_reset">Reset</string>

    <string name="ask_retry">Retry or not?</string>
    <string name="ask_save_or_not">Save or not？</string>
    <string name="house_choice">House style choice</string>

    <!---->
    <string name="wifi">Wifi</string>
    <string name="my_phone">My Phone</string>
    <string name="client">Client</string>

    <!--startactivity-->
    <string name="cannot_connect_master">Cannot connect master</string>
    <string name="notice_init">Initiate…</string>
    <string name="notice_get_device">Load devices info……</string>
    <string name="notice_get_device_status">Load devices status……</string>
    <string name="notice_get_master">Load Master info……</string>
    <string name="notice_connect_wifi">Go to connect WIFI?</string>
    <string name="new_user">New user</string>
    <string name="notice_please_choice_one">Please choose any one choice.</string>
    <!--mainactivity-->
    <string name="title_intensity_map">Intensity area picture</string>
    <string name="action_optimize">Optimize</string>
    <string name="action_channel_set">Channel set</string>
    <string name="notice_wait_for_develop">Wait for develop</string>
    <string name="title_device_list">Device List</string>
    <string name="notice_download_data">Please wait for download data...</string>

    <string name="action_save_programme">Save programme</string>
    <string name="action_load_programme">Load programme</string>
    <string name="notice_containe_same_name">There have save name recode,please retry.</string>
    <string name="programme">Programme</string>
    <string name="average">Average Value</string>
    <string name="title_change_channel">Set the channel your choosed（1～13）</string>
    <string name="title_change_channel_5g">Set the channel your choosed（%s）</string>
    <string name="request_sending">Request is sending……</string>
    <string name="request_send_complete">Request-send completed.</string>
    <string name="notice_programme_max_limit">Can not add more programme because reached max number.</string>
    <string name="tab_input_channel_number">Please input the channel num:</string>
    <string name="notice_at_least_one_client">At least one clint require.</string>
    <string name="username">User name</string>
    <string name="count_of_programme">Count of programme</string>
    <!--channel condition-->
    <string name="no_data">No data</string>
    <string name="start_scan">Start scan</string>
    <string name="optimization">Optimization</string>
    <string name="onScanChanneling">Channel scanning……</string>
    <string name="channel2_4">Channel 2.4G</string>
    <string name="channel5_0">Channel 5G </string>
    <string name="changeChannel">Change channel</string>
    <string name="optimizationComplete">Optimization Complete</string>
    <string name="optimizationAdvice">Optimization advice</string>
    <string name="tabChannelCondition">Channel Condition：</string>
    <string name="noticeCurChannelBest">Current Channel is the best.</string>
    <string name="adviceChannel">Advice to use %d channel.</string>
    <string name="formatChannalUsageCondition">"Channel %d:%d"</string>
    <string name="noticeWaitForReconnect">Channel change complete,please wait for reconnect……</string>
    <string name="optimizeResult">Optimize result</string>

    <!--OprationActivity-->
    <string name="ask_delete_recode">Are your really to delete all the programme recodes?</string>
    <string name="ask_reset">Are your really to resume the default option?</string>
    <string name="notice_data_empty">There is none  programme recodes to be clean.</string>
    <string name="clean_programme">Clean data</string>
    <string name="tab_noun">Low noum：</string>
    <string name="tab_show_type">Display style：</string>
    <string name="tab_programme_data">Programme data：</string>
    <!--wifi detail-->
    <string name="title_device_detail">Device Detail</string>
    <string name="tab_cur_signal">Signal intensty</string>
    <string name="offline">Offline</string>
    <string name="tab_ip" translatable="false">IP</string>
    <string name="tab_name">Name</string>
    <string name="tab_mac" translatable="false">MAC</string>
    <string name="tab_cur_chn">Current Channel</string>
    <string name="tab_translate_speed">Translate speed:</string>
    <string name="action_test_speed">Click to test Speed</string>
    <string name="notice_wait_for_test_speed">In test speed,please wait for a moument……</string>
    <string name="notice_test_task_canceled">Test task has been canceled.</string>
    <!--ChannelOptimizeResult-->
    <string name="cur_programme">Current programme</string>
</resources>
